--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-name: Noah Field
-login: fieldn
+Monitor Script
 
-All aspects of the lab function as stipulated in the handout. For the monitor script, I included extra functionality that displays the process' usage statistics in real time to the user in the terminal.
+Password Script
